test/modules/vass/userInsteadOfStandard/foo2.good
ChapelIO.chpl:55: In function 'testchapelio':
ChapelIO.chpl:56: warning: test warning
foo2.chpl:1: error: done
